[gd_scene load_steps=3 format=3 uid="uid://c4mbubxlv8m3p"]

[ext_resource type="Theme" uid="uid://gwjtp8avnct" path="res://themes/balatro_ui_theme.tres" id="1_bc00d"]
[ext_resource type="Script" uid="uid://ds38no153t3la" path="res://scripts/ui/xp_display_panel.gd" id="1_whsaw"]

[node name="XPDisplayPanel" type="PanelContainer"]
custom_minimum_size = Vector2(250, 250)
theme = ExtResource("1_bc00d")
script = ExtResource("1_whsaw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LevelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/LevelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Level 1"
horizontal_alignment = 1

[node name="XPContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="XPProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/XPContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
show_percentage = false

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer/XPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0 / 100 XP"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="AchievementGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 5

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Reset All Stats"
